--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,11 @@ dependencies:
   splashscreen: ^1.2.0
   font_awesome_flutter: ^9.2.0
   carousel_slider: ^4.0.0
-
+  firebase_core: ^1.3.0
+  google_sign_in: ^5.2.1
+  google_sign_in_web: ^0.10.0+3
+  shared_preferences: ^2.0.11
+  dio: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
