--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_sign_in_web: ^0.10.0+3
   shared_preferences: ^2.0.11
   dio: ^3.0.3
+  provider: ^4.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
